overflow fix test

--- a/021/travel_more/assets/css/style.scss
+++ b/021/travel_more/assets/css/style.scss
@@ -774,7 +774,7 @@ body {
   body {
     @include fz(18);
   }
-  section {
+  html {
     overflow-x: hidden;
   }
   .menu {
